Linux CMake support

--- a/changelog
+++ b/changelog
@@ -1,4 +1,10 @@
 /**********************
+** v0.4: 12/06/16
+**********************/
+	- Linux CMake config
+
+
+/**********************
 ** v0.3: 04/06/16
 **********************/
 	- Migration to Qt5
